# zacky-ia

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  plan_trabajo_tecnico.md  pyproject.toml
.github/workflows/: deploy.yml
infra/: Dockerfile.api  Dockerfile.ui
infra/terraform/: main.tf  terraform.tfvars.example  variables.tf
notebooks/: 01_eda.ipynb  02_clustering_exploration.ipynb
prompts/: system.txt
scripts/: run_backfill.sh  setup_bq.py
src/: config.py
src/api/: main.py
src/ingestion/: __init__.py  backfill.py  incremental.py  zendesk_client.py
src/intents/: clustering.py  embeddings.py  labeling.py
src/processing/: cleaner.py  pii_redactor.py  pipeline.py
src/ui/: app.py
tests/test_ingestion/: test_zendesk_client.py
tests/test_processing/: test_cleaner.py  test_pii_redactor.py
